[package]
name = "radix_immutable"
version = "0.0.1"
description = "Generic immutable radix trie data-structure."
edition = "2018"
license = "MIT"
authors = [
    "Micah Fitch <micahscopes@gmail.com>",
    "Michael Sproul <micsproul@gmail.com>",
]

repository = "https://github.com/micahscopes/radix_immutable"
documentation = "https://docs.rs/radix_immutable/"
readme = "README.md"

keywords = ["trie", "patricia", "collection", "generic", "prefix", "immutable"]
categories = ["data-structures", "text-processing"]


[features]

[dev-dependencies]
url = "2.4.0"
criterion = "0.3"
quickcheck = "1.0"
rand = "0.8"
serde_test = "1.0"

[[bench]]
name = "trie_benches"
harness = false

[lib]
bench = false

[badges]
appveyor = { repository = "micahscopes/radix_immutable" }
maintenance = { status = "as-is" }
